# Log

./: CMakeLists.txt  README.md
include/: Log.h  WSLog.h
src/: Log.cpp  WSLog.cpp
test/: LogTest.cpp
